tests/NormalTests/paczka1/small_fuzzy/42144390.err
Error in line 1: sN8uHaM7PgZ S358 6,9
Error in line 8: A718 A907 1,3
